--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://aiyus2020.github.io/venue",
+  "homepage": "",
   "name": "venue",
   "version": "0.1.0",
   "private": true,
